; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_get_best_mix.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_get_best_mix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HB_AMIXDOWN_NONE = common dso_local global i64 0, align 8
@HB_INVALID_AMIXDOWN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ghb_get_best_mix(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @HB_AMIXDOWN_NONE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = load i64, i64* @HB_INVALID_AMIXDOWN, align 8
  store i64 %11, i64* %6, align 8
  br label %12

12:                                               ; preds = %10, %3
  %13 = load i64, i64* %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = load i64, i64* %6, align 8
  %16 = call i64 @hb_mixdown_get_best(i64 %13, i32 %14, i64 %15)
  ret i64 %16
}

declare dso_local i64 @hb_mixdown_get_best(i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
